--- a/src/dc/demo/imap/IMAPTestService.cls
+++ b/src/dc/demo/imap/IMAPTestService.cls
@@ -1,7 +1,7 @@
-Class dc.Demo.imap.python.IMAPPyTestService Extends Ens.BusinessService
+Class dc.demo.imap.IMAPTestService Extends Ens.BusinessService
 {
 
-Parameter ADAPTER = "dc.Demo.imap.python.IMAPPyInboundAdapter";
+Parameter ADAPTER = "dc.demo.imap.IMAPInboundAdapter";
 
 Method OnProcessInput(pMailMessage As %Net.MailMessage, pOutput As %RegisteredObject) As %Status
 {
@@ -13,12 +13,12 @@ Method OnProcessInput(pMailMessage As %Net.MailMessage, pOutput As %RegisteredOb
             $$$TRACE("EMail rejected: "_tSubject)
             Quit
         }
-        Set tSendReply = ##class(dc.Demo.imap.IMAPTestReplyMsg).%New()
+        Set tSendReply = ##class(dc.demo.imap.IMAPTestReplyMsg).%New()
         Set tSendReply.Text = tSubject
         Set tSendReply.Destination = pMailMessage.From
         Set tSendReply.Sender = pMailMessage.To.GetAt(1)
-        Set tSC = ..SendRequestAsync("dc.Demo.imap.IMAPTestSendEmailOperation", tSendReply)
-        $$$TRACE("SendRequestAsync to dc.Demo.imap.IMAPTestSendEmailOperation")    
+        Set tSC = ..SendRequestAsync("dc.demo.imap.IMAPTestSendEmailOperation", tSendReply)
+        $$$TRACE("SendRequestAsync to dc.demo.imap.IMAPTestSendEmailOperation")    
     } Catch(ex) {
         Set tSC = ex.AsStatus()
     }
