--- a/src/dc/demo/imap/python/POP3ToIMAPPyAdapter.cls
+++ b/src/dc/demo/imap/python/POP3ToIMAPPyAdapter.cls
@@ -2,7 +2,7 @@ Include Ensemble
 
 /// An utility class to map POP3 method to the equivalent ones for IMAP,
 /// using an IMAP client based on imaplib Python library
-Class dc.Demo.imap.python.POP3ToIMAPPyAdapter Extends dc.Demo.imap.POP3ToIMAPAdapter
+Class dc.demo.imap.python.POP3ToIMAPPyAdapter Extends dc.demo.imap.POP3ToIMAPAdapter
 {
 
 /// Description
@@ -10,7 +10,7 @@ Method %OnNew() As %Status [ Private ]
 {
     Set sc = $$$OK
     Try {
-        Set ..IMAPClient = ##class(dc.Demo.imap.python.IMAPPy).%New()
+        Set ..IMAPClient = ##class(dc.demo.imap.python.IMAPPy).%New()
     }
     Catch ex {
         Set sc=ex.AsStatus()
